--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "convospot-widget",
-  "title": "convospot widget",
+  "name": "beryl",
+  "title": "overlay widget",
   "description": "the widget for embedding in websites",
-  "version": "1.0.12",
+  "version": "2.0.12",
   "author": {
     "name": "Homer Quan",
-    "email": "homer@convospot.io",
-    "url": "https://www.convospot.io"
+    "email": "dev@reflen.com",
+    "url": "https://www.reflen.com"
   },
   "engines": {
-    "node": ">=6.5",
-    "npm": ">=3.10"
+    "node": ">=8.10",
+    "npm": ">=6.4"
   },
   "main": "./server/index",
   "private": true,
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "eslint": "^5.9.0",
+    "eslint-config-google": "^0.11.0",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
@@ -41,9 +43,9 @@
     "mocha": "^3.1.2",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
+    "semver": "^5.3.0",
     "vulcanize": ">= 1.4.2",
-    "web-component-tester": "^4.3.4",
-    "semver": "^5.3.0"
+    "web-component-tester": "^4.3.4"
   },
   "scripts": {
     "prestart": "if [ ! -d node_modules ]; then npm install; fi",
